# Ecommerce-Assistant-Jasmine

./: .gitignore  README.md  action.dockerfile  config.production.yml  config.yml  credentials.production.yml  docker-compose-dev.yml  docker-compose.yml  dockerfile  domain.yml  domain2.yml  index.html  index2.html  pyproject.toml  story_graph.dot
actions/: actions.py  mock_data.json  requirements-actions.txt  user_email.html  utils.py
data/: names.txt  names1.txt  nlu.yml  stories.yml  stories3.yml
data/nlu/: buy_clothes.yml  chichat.yml  chitchat.yml  faq.yml  general.yml
data/nlu/responses/: responses.yml
data/rules/: clothes_form.yml  common.yml  fallback.yml  feedback_form.yml  name_form.yml
data/stories/: buy_clothes.yml  give_feedback.yml  give_name.yml  happy.yml  stories_test.yml
results/: DIETClassifier_errors.json  DIETClassifier_report.json  intent_errors.json  intent_report.json  response_selection_errors.json  response_selection_report.json
results_v0/: DIETClassifier_errors.json  DIETClassifier_report.json  intent_errors.json  intent_report.json  response_selection_errors.json  response_selection_report.json
results_v1/: DIETClassifier_report.json  intent_errors.json  intent_report.json  response_selection_errors.json  response_selection_report.json
