[tool.poetry]
name = "ecommerce-assistant"
version = "0.1.0"
description = "This a sample Rasa bot"
authors = ["Ivan Aguas <aguas.xavier2013a@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^3.0.4"}
spacy = "^3.2.1"
algoliasearch = "^2.6.1"
autopep8 = "^1.6.0"
python-dotenv = "^0.19.2"
sanic = "21.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"