[tool.poetry]
name = "ecommerce-assistant"
version = "0.1.0"
description = ""
authors = ["Ivan Aguas <aguas.xavier2013a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^2.8.14"}
spacy = "^3.2.1"
algoliasearch = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
