[tool.poetry]
name = "ecommerce-assistant"
version = "0.1.0"
description = ""
authors = ["Ivan Aguas <aguas.xavier2013a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^2.8.14"}
es-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.1.0/es_core_news_md-3.1.0-py3-none-any.whl"}
spacy = ">=3.1.0,<3.2.0"
algoliasearch = "^2.6.1"
pyairtable = "^1.0.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
